web/app/themes/vestedworld/assets/styles/pages/_countries.scss
// Countries Page

// Keep charts from getting too large on small screens
@include max-screen($breakpoint-md) {
  .chart {
    max-width: 60%;
    margin: 0 auto;
  }
}

a.source {
  text-decoration: none;
  color: $gray;
}

// General style for stat numbers
.stat-num {
  color: $blue;
  display: block;
  padding-right: 10px;
  @extend .h2;
  @extend %smooth;
  &.dark {
    color: $blue-dark;
  }
}

// Source list for stats in footer
#sources-list {
  margin-top: #{$vertical-beat * 12};
  color: $gray-dark;
  h3 {
    @include small-caps;
    color: $gray-dark;
    margin-bottom: #{$vertical-beat * 2};
  }
  ul {
    font: 11px/16px $sans;
    &,li {
      margin: 0;
      padding: 0;
    }
    li {
      span {
        display: inline-block;
        width: 30px;
      }
    }
  }
}

// General stat styles
.row {
  display: flex;
  flex-flow: row wrap;
  border-bottom: 1px solid $gray-lite;
  &.-persist {
    flex-flow: row nowrap;
    .one-half {
      flex-basis: 50%;
    }
  }
  @include media-md {
    flex-flow: row nowrap;
    .one-half {
      flex-basis: 50%;
    }
  }
}
.stat-label {
  display: block;
  @include small-caps;
  line-height: 1.45;
}

.chart {
  position: relative;
  .ct-chart {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

// Flex rows inside .row
.inner-row {
  display: flex;
  flex-flow: row wrap;
  .chart,
  .chart-labels {
    flex: 0 1 100%;
  }

  &.-persist {
    flex-flow: row nowrap;
    .chart {
      flex: 0 1 33.333%;
    }
    .chart-labels {
      flex: 0 1 66.666%;
    }
  }
  @include media-md {
    &:not(.wrap) {
      flex-flow: row nowrap;
    }
    .chart {
      flex: 0 1 33.333%;
    }
    .chart-labels {
      flex: 0 1 66.666%;
    }
  }
}

// Oft-used half width row
.half-width-row {
  .stat-row {
    padding: #{$vertical-beat * 3} 0;
    flex: 0 1 100%;
    .stat-num {
      flex: 0 1 50%;
    }
    .stat-label {
      flex: 0 1 50%;
      padding: 5px 10px 0 0;
    }
    &:nth-child(1) {
      padding-left: 0;
    }
    @include media-md {
      flex: 0 1 50%;
      &:nth-child(2) {
        border-left: 1px solid $gray-lite;
        padding-left: $mobile-global-padding;
      }
    }
  }
}

// Shared Timeline styles
dl.timeline {
  display: flex;
  flex-flow: row wrap;
  border-bottom: 1px solid $gray-dark;
  padding-bottom: #{$vertical-beat * 2};
  dt {
    @extend .h2;
    flex: 0 1 30%;
    @include min-screen(1200px) {
      flex: 0 1 22.2222%;
    }
    color: $blue;
    @extend %smooth;
    border-right: 1px solid $blue;
    position: relative;
    clear: left;
    min-height: 70px;
    padding-bottom: #{$vertical-beat * 5};
    &:last-of-type::before,
    &:first-of-type::before {
      display: block;
      position: absolute;
      content: '';
      height: 20px;
      width: 20px;
      background: $gray-lite;
      top: 0;
      right: -10px;
    }
    &:last-of-type {
      padding: 0;
      &::before {
        top: 20px;
        height: calc(100% - 20px);
      }
    }
    &::after {
      display: block;
      content: '';
      width: 8px;
      height: 8px;
      position: absolute;
      background: $gray-lite;
      top: 15px;
      right: -4px;
      border: 1px solid $blue;
      border-radius: 50%;
    }
  }
  dd {
    margin: 0;
    padding: 4px 0 #{$vertical-beat * 5} $mobile-global-padding;
    flex: 0 1 70%;
    @include min-screen(1200px) {
      flex: 0 1 77.7777%;
      padding: 4px 0 #{$vertical-beat * 5} $global-padding;
    }
  }
}

// Shared single country + industry styles
article.single.industry,
article.single.country {
  .section-title {
    color: $blue;
    background: $white;
  }
  // Reverse color scheme for main content areas
  .-left {
    background: $gray-lite;
  }
  .grid-item-body {
    background: $white;
    .tab {
      color: $white;
    }
  }
  // Large blue box in left column
  .intro-text {
    background: $blue;
    color: $white;
    h2 {
      @extend .h1;
      text-transform: none;
      letter-spacing: 0;
      margin-bottom: #{$vertical-beat * 4};
      @extend %smooth;
      @include media-md {
        margin-bottom: #{$vertical-beat * 6};
      }
    }
  }

  .grid-item-body {
    padding: 0;
  }
  .grid-text-group {
    position: relative;
    padding: $mobile-global-padding;
    @include media-md {
      padding: #{$vertical-beat * 5} $global-padding;
    }
  }
}

// Single country styles
article.single.country {

  // Country Overview
  ///////////////////
  .country-overview-stats {
    border-top: 1px solid $gray-lite;
    border-bottom: 1px solid $gray-lite;
    margin: #{$vertical-beat * 2} 0;
  }
  .population-chart {
    padding: #{$vertical-beat * 3} 0;
    .inner-row {
      justify-content: center;
    }
    .chart-labels {
      align-self: center;
      padding: 0 $mobile-global-padding;
      .stat-num {
        padding-right: 8px;
      }
      .row {
        padding: $vertical-beat 0;
        &:last-child {
          border: none;
        }
      }
    }
    @include media-md {
      flex: 0 1 77.7777%;
      border-right: 1px solid $gray-lite;
      .chart-labels {
        text-align: left;
      }
      .inner-row {
        justify-content: flex-start;
        .chart {
          flex: 0 1 28.57%;
        }
      }
    }
  } // end .population-chart
  .median-age {
    flex: 0 1 100%;
    padding: #{$vertical-beat * 6} $mobile-global-padding;
    align-self: center;
    text-align: center;
    border-top: 1px solid $gray-lite;
    .stat-num {
      margin-bottom: #{$vertical-beat * 1};
    }
    @include media-md {
      border-top: none;
      flex: 0 1 22.2%;
      text-align: left;
    }
  }
  .poverty-chart,
  .workforce-chart {
    .chart-labels {
      text-align: center;
    }
    @include media-md {
      padding: #{$vertical-beat * 3} $mobile-global-padding #{$vertical-beat * 3} 0;
      flex: 0 1 50%;
      .chart-labels {
        text-align: left;
        padding-left: $mobile-global-padding;
        .stat-num {
          margin-bottom: #{$vertical-beat * 1};
        }
      }
    }
  }
  @include media-md {
    .poverty-chart {
      border-right: 1px solid $gray-lite;
    }
    .workforce-chart {
      padding: #{$vertical-beat * 3} 0 #{$vertical-beat * 3} $mobile-global-padding;
    }
  }
  .income-level-classification {
    .stat-label {
      flex: 0 1 100%;
    }
    ul,li {
      margin: 0;
      padding: 0;
    }
    ul {
      padding: #{$vertical-beat * 3} 0;
      border-bottom: none;
      li {
        @include small-caps;
        flex: 0 1 100%;
        display: block;
        line-height: 1.45;
        padding: $vertical-beat 8px;
        border-top: 1px solid $gray-lite;
        color: $gray-lite;
        align-self: center;
        text-align: center;
        position: relative;
        &.stat-label {
          border: none;
          color: $black;
        }
        &.active {
          color: $blue;
        }
      }
    }

    @include media-md {
      .stat-label {
        flex: 0 1 33.33%;
      }
      ul {
        li {
          flex: 0 1 16.67%;
          border-top: none;
          &::before {
            content: '';
            position: absolute;
            left: 0;
            top: 50%;
            width: 1px;
            height: 30px;
            margin-top: -15px;
            background: $gray-lite;
          }
          &.stat-label {
            text-align: left;
            &::before {
              background: none;
            }
          }
        }
      }
    }

  } // .income-level-classification

  // Economic Outlook
  ///////////////////
  .outlook-stats {
    border-top: 1px solid $gray-lite;
    margin: #{$vertical-beat * 2} 0;
  }
  .gdp-growth-chart,
  .gdp-growth-labels {
    padding: #{$vertical-beat * 3} 0;
    flex: 0 1 50%;
  }
  .gdp-growth-chart {
    .chart {
      max-width: none;
    }
    > .inner-row {
      padding-right: $mobile-global-padding;
    }
    @include media-md {
      > .inner-row {
        padding-right: $mobile-global-padding;
      }
      .inner-row {
        .chart-labels,
        .chart {
          flex: 0 1 50%;
          height: 140px;
        }
      }
    }
  }
  .gdp-growth-labels {
    @include media-md {
      padding-left: $mobile-global-padding;
    }
    .inner-row {
      border-bottom: 1px solid $gray-lite;
      padding: $vertical-beat 0;
      &:first-child {
        padding-top: 0;
      }
      &:last-child {
        border-bottom: none;
        padding-bottom: 0;
      }
    }
    .stat-label {
      padding-top: 5px;
      flex: 0 1 45%;
    }
    .stat-num {
      flex: 0 1 55%;
    }
  }

  .gross-gdp,
  .per-capita-gdp {}
  .inflation,
  .foreign-direct-investments {}

  .ratio {
    position: relative;
    font: 16px/24px $sans;
    letter-spacing: .15em;
    height: 50px;
    i {
      display: none;
    }
    .num1 {
      position: absolute;
      top: 0;
      left: 0;
      &::after {
        content: '';
        position: absolute;
        top: 25px;
        left: 10px;
        border-top: 1px solid $gray;
        width: 50px;
        transform: rotate(-52deg);
      }
    }
    .num2 {
      position: absolute;
      bottom: 0;
      left: 45px;
    }
  }

  .average-exchange-rate {
    color: $blue;
    @extend .h2;
    .currency {
      font: 16px/24px $sans;
      letter-spacing: .2em;
    }
    .exchange-rate-comparison {
      i {
        display: inline-block;
        width: 40px;
        height: 40px;
        position: relative;
        text-indent: -9999em;
        &::after {
          content: '';
          position: absolute;
          top: 20px;
          left: -5px;
          border-top: 1px solid $gray;
          width: 50px;
          transform: rotate(-52deg);
        }
      }
    }
  }
  .half-width-row .stat-row.exchange-rate-details {
    border-left: none;
  }

  // Key Sectors
  //////////////
  .key-sector-stats {
    border-top: 1px solid $gray-lite;
    margin: #{$vertical-beat * 2} 0;
    .stat-row:nth-child(1) {
      padding-right: $mobile-global-padding;
      border-bottom: 1px solid $gray-lite;
      @include media-md {
        border-bottom: none;
      }
    }
    .chart {
      @include clearfix;
      .pie-label {
        text-align: center;
        margin-bottom: 10px;
        @include small-caps;
        line-height: 1.5;
      }
      @include min-screen(1200px) {
        .pie-label {
          text-align: left;
          width: 44%;
          float: left;
        }
        .pie-chart {
          width: 56%;
          float: left;
        }
      }
    }
    .inner-row {
      align-items: baseline;
      border-bottom: 1px solid $gray-lite;
      padding: $vertical-beat 0;
      &:first-child {
        padding-top: 0;
      }
      &:last-child {
        border-bottom: none;
        padding-bottom: 0;
      }
    }
  }
} // article.single.country

